[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/Actionable.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/ItemCrate.gd" type="Script" id=2]
[ext_resource path="res://Assets/meshes/crate.obj" type="ArrayMesh" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.19696, 1.20234, 1.91989 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 0.949, 0.2408, -0.7592, 0.949, 0.2408, 0.7592, 0.8245, 0.2408, -0.7592, 0.8245, 0.2408, -0.7592, 0.949, 0.2408, 0.7592, 0.8245, 0.2408, 0.7592, -0.949, 1.7592, -0.7592, -0.949, 1.7592, 0.7592, -0.8245, 1.7592, -0.7592, -0.8245, 1.7592, -0.7592, -0.949, 1.7592, 0.7592, -0.8245, 1.7592, 0.7592, 0.7592, 1.7592, 0.949, 0.7592, 0.2408, 0.949, 0.7592, 1.7592, 0.8245, 0.7592, 1.7592, 0.8245, 0.7592, 0.2408, 0.949, 0.7592, 0.2408, 0.8245, -0.7592, 0.2408, -0.949, 0.7592, 0.2408, -0.949, -0.7592, 0.2408, -0.8245, -0.7592, 0.2408, -0.8245, 0.7592, 0.2408, -0.949, 0.7592, 0.2408, -0.8245, 0.949, 1.7592, -0.7592, 0.949, 0.2408, -0.7592, 0.8245, 1.7592, -0.7592, 0.8245, 1.7592, -0.7592, 0.949, 0.2408, -0.7592, 0.8245, 0.2408, -0.7592, -0.949, 0.2408, 0.7592, -0.949, 0.2408, -0.7592, -0.8245, 0.2408, 0.7592, -0.8245, 0.2408, 0.7592, -0.949, 0.2408, -0.7592, -0.8245, 0.2408, -0.7592, -0.949, 1.949, 0.949, -0.949, 0.051, 0.949, -0.949, 1.7592, 0.7592, -0.949, 1.7592, 0.7592, -0.949, 0.051, 0.949, -0.949, 0.2408, 0.7592, -0.949, 1.949, -0.949, -0.949, 1.949, 0.949, -0.949, 1.7592, -0.7592, -0.949, 1.7592, -0.7592, -0.949, 1.949, 0.949, -0.949, 1.7592, 0.7592, -0.949, 0.051, -0.949, -0.949, 1.949, -0.949, -0.949, 0.2408, -0.7592, -0.949, 0.2408, -0.7592, -0.949, 1.949, -0.949, -0.949, 1.7592, -0.7592, -0.949, 0.051, 0.949, -0.949, 0.051, -0.949, -0.949, 0.2408, 0.7592, -0.949, 0.2408, 0.7592, -0.949, 0.051, -0.949, -0.949, 0.2408, -0.7592, -0.949, 1.949, -0.949, -0.949, 0.051, -0.949, -0.7592, 1.7592, -0.949, -0.7592, 1.7592, -0.949, -0.949, 0.051, -0.949, -0.7592, 0.2408, -0.949, 0.949, 1.949, -0.949, -0.949, 1.949, -0.949, 0.7592, 1.7592, -0.949, 0.7592, 1.7592, -0.949, -0.949, 1.949, -0.949, -0.7592, 1.7592, -0.949, 0.949, 0.051, -0.949, 0.949, 1.949, -0.949, 0.7592, 0.2408, -0.949, 0.7592, 0.2408, -0.949, 0.949, 1.949, -0.949, 0.7592, 1.7592, -0.949, -0.949, 0.051, -0.949, 0.949, 0.051, -0.949, -0.7592, 0.2408, -0.949, -0.7592, 0.2408, -0.949, 0.949, 0.051, -0.949, 0.7592, 0.2408, -0.949, 0.949, 1.949, -0.949, 0.949, 0.051, -0.949, 0.949, 1.7592, -0.7592, 0.949, 1.7592, -0.7592, 0.949, 0.051, -0.949, 0.949, 0.2408, -0.7592, 0.949, 1.949, 0.949, 0.949, 1.949, -0.949, 0.949, 1.7592, 0.7592, 0.949, 1.7592, 0.7592, 0.949, 1.949, -0.949, 0.949, 1.7592, -0.7592, 0.949, 0.051, 0.949, 0.949, 1.949, 0.949, 0.949, 0.2408, 0.7592, 0.949, 0.2408, 0.7592, 0.949, 1.949, 0.949, 0.949, 1.7592, 0.7592, 0.949, 0.051, -0.949, 0.949, 0.051, 0.949, 0.949, 0.2408, -0.7592, 0.949, 0.2408, -0.7592, 0.949, 0.051, 0.949, 0.949, 0.2408, 0.7592, 0.949, 1.949, 0.949, 0.949, 0.051, 0.949, 0.7592, 1.7592, 0.949, 0.7592, 1.7592, 0.949, 0.949, 0.051, 0.949, 0.7592, 0.2408, 0.949, -0.949, 1.949, 0.949, 0.949, 1.949, 0.949, -0.7592, 1.7592, 0.949, -0.7592, 1.7592, 0.949, 0.949, 1.949, 0.949, 0.7592, 1.7592, 0.949, -0.949, 0.051, 0.949, -0.949, 1.949, 0.949, -0.7592, 0.2408, 0.949, -0.7592, 0.2408, 0.949, -0.949, 1.949, 0.949, -0.7592, 1.7592, 0.949, 0.949, 0.051, 0.949, -0.949, 0.051, 0.949, 0.7592, 0.2408, 0.949, 0.7592, 0.2408, 0.949, -0.949, 0.051, 0.949, -0.7592, 0.2408, 0.949, 0.949, 0.051, -0.949, -0.949, 0.051, -0.949, 0.7592, 0.051, -0.7592, 0.7592, 0.051, -0.7592, -0.949, 0.051, -0.949, -0.7592, 0.051, -0.7592, 0.949, 0.051, 0.949, 0.949, 0.051, -0.949, 0.7592, 0.051, 0.7592, 0.7592, 0.051, 0.7592, 0.949, 0.051, -0.949, 0.7592, 0.051, -0.7592, -0.949, 0.051, 0.949, 0.949, 0.051, 0.949, -0.7592, 0.051, 0.7592, -0.7592, 0.051, 0.7592, 0.949, 0.051, 0.949, 0.7592, 0.051, 0.7592, -0.949, 0.051, -0.949, -0.949, 0.051, 0.949, -0.7592, 0.051, -0.7592, -0.7592, 0.051, -0.7592, -0.949, 0.051, 0.949, -0.7592, 0.051, 0.7592, -0.949, 1.949, -0.949, 0.949, 1.949, -0.949, -0.7592, 1.949, -0.7592, -0.7592, 1.949, -0.7592, 0.949, 1.949, -0.949, 0.7592, 1.949, -0.7592, -0.949, 1.949, 0.949, -0.949, 1.949, -0.949, -0.7592, 1.949, 0.7592, -0.7592, 1.949, 0.7592, -0.949, 1.949, -0.949, -0.7592, 1.949, -0.7592, 0.949, 1.949, 0.949, -0.949, 1.949, 0.949, 0.7592, 1.949, 0.7592, 0.7592, 1.949, 0.7592, -0.949, 1.949, 0.949, -0.7592, 1.949, 0.7592, 0.949, 1.949, -0.949, 0.949, 1.949, 0.949, 0.7592, 1.949, -0.7592, 0.7592, 1.949, -0.7592, 0.949, 1.949, 0.949, 0.7592, 1.949, 0.7592, 0.7592, 0.051, -0.7592, -0.7592, 0.051, -0.7592, 0.7592, 0.1755, -0.7592, 0.7592, 0.1755, -0.7592, -0.7592, 0.051, -0.7592, -0.7592, 0.1755, -0.7592, 0.7592, 1.7592, -0.949, -0.7592, 1.7592, -0.949, 0.7592, 1.7592, -0.8245, 0.7592, 1.7592, -0.8245, -0.7592, 1.7592, -0.949, -0.7592, 1.7592, -0.8245, 0.7592, 0.2408, 0.949, -0.7592, 0.2408, 0.949, 0.7592, 0.2408, 0.8245, 0.7592, 0.2408, 0.8245, -0.7592, 0.2408, 0.949, -0.7592, 0.2408, 0.8245, -0.7592, 1.949, -0.7592, 0.7592, 1.949, -0.7592, -0.7592, 1.8245, -0.7592, -0.7592, 1.8245, -0.7592, 0.7592, 1.949, -0.7592, 0.7592, 1.8245, -0.7592, -0.949, 0.2408, -0.7592, -0.949, 1.7592, -0.7592, -0.8245, 0.2408, -0.7592, -0.8245, 0.2408, -0.7592, -0.949, 1.7592, -0.7592, -0.8245, 1.7592, -0.7592, 0.949, 1.7592, 0.7592, 0.949, 1.7592, -0.7592, 0.8245, 1.7592, 0.7592, 0.8245, 1.7592, 0.7592, 0.949, 1.7592, -0.7592, 0.8245, 1.7592, -0.7592, -0.7592, 0.051, -0.7592, -0.7592, 0.051, 0.7592, -0.7592, 0.1755, -0.7592, -0.7592, 0.1755, -0.7592, -0.7592, 0.051, 0.7592, -0.7592, 0.1755, 0.7592, 0.7592, 0.2408, -0.949, 0.7592, 1.7592, -0.949, 0.7592, 0.2408, -0.8245, 0.7592, 0.2408, -0.8245, 0.7592, 1.7592, -0.949, 0.7592, 1.7592, -0.8245, -0.7592, 1.7592, 0.949, 0.7592, 1.7592, 0.949, -0.7592, 1.7592, 0.8245, -0.7592, 1.7592, 0.8245, 0.7592, 1.7592, 0.949, 0.7592, 1.7592, 0.8245, 0.7592, 1.949, -0.7592, 0.7592, 1.949, 0.7592, 0.7592, 1.8245, -0.7592, 0.7592, 1.8245, -0.7592, 0.7592, 1.949, 0.7592, 0.7592, 1.8245, 0.7592, 0.949, 0.2408, 0.7592, 0.949, 1.7592, 0.7592, 0.8245, 0.2408, 0.7592, 0.8245, 0.2408, 0.7592, 0.949, 1.7592, 0.7592, 0.8245, 1.7592, 0.7592, 0.7592, 0.051, 0.7592, 0.7592, 0.051, -0.7592, 0.7592, 0.1755, 0.7592, 0.7592, 0.1755, 0.7592, 0.7592, 0.051, -0.7592, 0.7592, 0.1755, -0.7592, -0.7592, 0.2408, 0.949, -0.7592, 1.7592, 0.949, -0.7592, 0.2408, 0.8245, -0.7592, 0.2408, 0.8245, -0.7592, 1.7592, 0.949, -0.7592, 1.7592, 0.8245, -0.7592, 1.949, 0.7592, -0.7592, 1.949, -0.7592, -0.7592, 1.8245, 0.7592, -0.7592, 1.8245, 0.7592, -0.7592, 1.949, -0.7592, -0.7592, 1.8245, -0.7592, -0.7592, 0.051, 0.7592, 0.7592, 0.051, 0.7592, -0.7592, 0.1755, 0.7592, -0.7592, 0.1755, 0.7592, 0.7592, 0.051, 0.7592, 0.7592, 0.1755, 0.7592, 0.7592, 1.949, 0.7592, -0.7592, 1.949, 0.7592, 0.7592, 1.8245, 0.7592, 0.7592, 1.8245, 0.7592, -0.7592, 1.949, 0.7592, -0.7592, 1.8245, 0.7592, -0.949, 1.7592, 0.7592, -0.949, 0.2408, 0.7592, -0.8245, 1.7592, 0.7592, -0.8245, 1.7592, 0.7592, -0.949, 0.2408, 0.7592, -0.8245, 0.2408, 0.7592, -0.7592, 1.7592, -0.949, -0.7592, 0.2408, -0.949, -0.7592, 1.7592, -0.8245, -0.7592, 1.7592, -0.8245, -0.7592, 0.2408, -0.949, -0.7592, 0.2408, -0.8245, -0.8245, 1.7592, 0.7592, -0.8245, 0.2408, 0.7592, -0.8245, 1.7592, -0.7592, -0.8245, 1.7592, -0.7592, -0.8245, 0.2408, 0.7592, -0.8245, 0.2408, -0.7592, -0.7592, 1.7592, -0.8245, -0.7592, 0.2408, -0.8245, 0.7592, 1.7592, -0.8245, 0.7592, 1.7592, -0.8245, -0.7592, 0.2408, -0.8245, 0.7592, 0.2408, -0.8245, 0.8245, 1.7592, -0.7592, 0.8245, 0.2408, -0.7592, 0.8245, 1.7592, 0.7592, 0.8245, 1.7592, 0.7592, 0.8245, 0.2408, -0.7592, 0.8245, 0.2408, 0.7592, 0.7592, 1.7592, 0.8245, 0.7592, 0.2408, 0.8245, -0.7592, 1.7592, 0.8245, -0.7592, 1.7592, 0.8245, 0.7592, 0.2408, 0.8245, -0.7592, 0.2408, 0.8245, 0.7592, 0.1755, -0.7592, -0.7592, 0.1755, -0.7592, 0.7592, 0.1755, 0.7592, 0.7592, 0.1755, 0.7592, -0.7592, 0.1755, -0.7592, -0.7592, 0.1755, 0.7592, -0.7592, 1.8245, -0.7592, 0.7592, 1.8245, -0.7592, -0.7592, 1.8245, 0.7592, -0.7592, 1.8245, 0.7592, 0.7592, 1.8245, -0.7592, 0.7592, 1.8245, 0.7592 )

[node name="ItemCrate" type="MeshInstance"]
mesh = ExtResource( 3 )
material/0 = null
material/1 = null
script = ExtResource( 2 )

[node name="Actionable" parent="." instance=ExtResource( 1 )]

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01447, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )
[connection signal="action_from_player" from="Actionable" to="." method="_on_Actionable_action_from_player"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
